force-app/main/default/objects/Sensor__c/fields/Base_Station__c.field-meta.xml
<CustomField>
    <fullName>Base_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Station</label>
    <referenceTo>Base_Station__c</referenceTo>
    <relationshipLabel>Sensors</relationshipLabel>
    <relationshipName>Sensors</relationshipName>
    <type>Lookup</type>
</CustomField>