force-app/main/default/objects/Sensor__c/fields/Sensor_model__c.field-meta.xml
<CustomField>
    <fullName>Sensor_model__c</fullName>
    <label>Sensor model</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>