force-app/main/default/objects/Sensor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sensor_model__c</columns>
    <columns>Status__c</columns>
    <columns>Base_Station__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>